--- a/packages/spindle-ui/src/Pagination/Pagination.stories.mdx
+++ b/packages/spindle-ui/src/Pagination/Pagination.stories.mdx
@@ -66,7 +66,7 @@ export const pageNumber = 1;
     <Pagination
       total={5}
       current={3}
-      showTotal={true}
+      showTotal={false}
       showFirstLast={true}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
       {...actions('onClick')}
@@ -75,7 +75,7 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination url="/article/page-PAGE_NUMBER.html" total={5} current={3} showTotal={true} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={'<Pagination url="/article/page-PAGE_NUMBER.html" total={5} current={3} showTotal={false} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
 />
 
 ## current 1 total 1
@@ -85,7 +85,7 @@ export const pageNumber = 1;
     <Pagination
       total={1}
       current={1}
-      showTotal={true}
+      showTotal={false}
       showFirstLast={false}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
       {...actions('onClick')}
@@ -94,7 +94,7 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination total={1} current={1} showTotal={true} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={'<Pagination total={1} current={1} showTotal={false} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
 />
 
 ## current 2 total 2
@@ -104,7 +104,7 @@ export const pageNumber = 1;
     <Pagination
       total={2}
       current={2}
-      showTotal={true}
+      showTotal={false}
       showFirstLast={false}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
       {...actions('onClick')}
@@ -113,7 +113,7 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination total={2} current={2} showTotal={true} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={'<Pagination total={2} current={2} showTotal={false} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
 />
 
 ## current 2 total 3
@@ -123,7 +123,7 @@ export const pageNumber = 1;
     <Pagination
       total={3}
       current={2}
-      showTotal={true}
+      showTotal={false}
       showFirstLast={false}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
       {...actions('onClick')}
@@ -132,7 +132,7 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination total={3} current={2} showTotal={true} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={'<Pagination total={3} current={2} showTotal={false} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
 />
 
 ## current 2 total 4
@@ -142,7 +142,7 @@ export const pageNumber = 1;
     <Pagination
       total={4}
       current={2}
-      showTotal={true}
+      showTotal={false}
       showFirstLast={false}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
       {...actions('onClick')}
@@ -151,7 +151,7 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination total={4} current={2} showTotal={true} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={'<Pagination total={4} current={2} showTotal={false} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
 />
 
 ## current 8 total 20
@@ -161,7 +161,7 @@ export const pageNumber = 1;
     <Pagination
       total={20}
       current={8}
-      showTotal={true}
+      showTotal={false}
       showFirstLast={true}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
       {...actions('onClick')}
@@ -170,7 +170,7 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination total={20} current={8} showTotal={true} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={'<Pagination total={20} current={8} showTotal={false} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
 />
 
 ## current 900 total 999
@@ -180,7 +180,7 @@ export const pageNumber = 1;
     <Pagination
       total={999}
       current={900}
-      showTotal={true}
+      showTotal={false}
       showFirstLast={true}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
       {...actions('onClick')}
@@ -189,7 +189,7 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination total={999} current={900} showTotal={true} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={'<Pagination total={999} current={900} showTotal={false} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
 />
 
 ## current 10000 total 20000
@@ -203,7 +203,7 @@ export const pageNumber = 1;
     <Pagination
       total={20000}
       current={10000}
-      showTotal={true}
+      showTotal={false}
       showFirstLast={true}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
       {...actions('onClick')}
@@ -212,7 +212,30 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination total={20000} current={10000} showTotal={true} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={'<Pagination total={20000} current={10000} showTotal={false} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+/>
+
+## showTotal props true
+
+<Description>
+  `showTotal`プロパティは`true`にすることで、現在のページ数と総ページ数を表示することができます。
+</Description>
+
+<Preview withSource="open">
+  <Story name="showTotal props true">
+    <Pagination
+      total={20}
+      current={8}
+      showTotal={true}
+      showFirstLast={false}
+      createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
+      {...actions('onClick')}
+    />
+  </Story>
+</Preview>
+
+<Source
+  code={'<Pagination total={20} current={8} showTotal={false} showFirstLast={false} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
 />
 
 ## showFirstLast props false
@@ -230,7 +253,7 @@ export const pageNumber = 1;
     <Pagination
       total={20}
       current={8}
-      showTotal={true}
+      showTotal={false}
       showFirstLast={false}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
       {...actions('onClick')}
@@ -239,61 +262,7 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination total={20} current={8} showTotal={true} showFirstLast={false} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
-/>
-
-## showPrevNext props false
-
-<Description>
-  `showPrevNext`プロパティは`false`にすることで、「前へ」と「次へ」アイコンを非表示にできます。
-</Description>
-
-<Description>
-  その場合、ページ番号にて前後と最初と最後のリンクを担保します。
-</Description>
-
-<Preview withSource="open">
-  <Story name="showPrevNext props false">
-    <Pagination
-      total={20}
-      current={8}
-      showTotal={true}
-      showFirstLast={true}
-      createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
-      {...actions('onClick')}
-    />
-  </Story>
-</Preview>
-
-<Source
-  code={'<Pagination total={20} current={8} showTotal={true} showFirstLast={false} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
-/>
-
-## showPrevNext showFirstLast props false
-
-<Description>
-  `showPrevNext`と`showFirstLast`プロパティは`false`にすることで、全てのアイコンを非表示にできます。
-</Description>
-
-<Description>
-  その場合、ページ番号にて前後と最初と最後のリンクを担保します。
-</Description>
-
-<Preview withSource="open">
-  <Story name="showPrevNext showFirstLast props false">
-    <Pagination
-      total={20}
-      current={8}
-      showTotal={true}
-      showFirstLast={false}
-      createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
-      {...actions('onClick')}
-    />
-  </Story>
-</Preview>
-
-<Source
-  code={'<Pagination total={20} current={8} showTotal={true} showFirstLast={false} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={'<Pagination total={20} current={8} showTotal={false} showFirstLast={false} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
 />
 
 ## create url function
@@ -303,7 +272,7 @@ export const pageNumber = 1;
     <Pagination
       total={20}
       current={8}
-      showTotal={true}
+      showTotal={false}
       showFirstLast={true}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
       {...actions('onClick')}
@@ -312,7 +281,7 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination total={20} current={8} showTotal={true} showFirstLast={false} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={'<Pagination total={20} current={8} showTotal={false} showFirstLast={false} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
 />
 
 ## リンク動作のカスタマイズ
