--- a/packages/spindle-ui/src/Pagination/Pagination.stories.mdx
+++ b/packages/spindle-ui/src/Pagination/Pagination.stories.mdx
@@ -25,9 +25,7 @@ import { Pagination } from './Pagination';
 
 <Description>Paginationはページの移動を目的として利用します。</Description>
 
-<Description>
-  ページの前後に移動することができます。
-</Description>
+<Description>ページの前後に移動することができます。</Description>
 
 <Description>デフォルトではアンカー要素を使用します。</Description>
 
@@ -37,20 +35,19 @@ import { Pagination } from './Pagination';
 
 ## 指定できるプロパティ
 
+<Description>- `current`(必須): 現在のページ数を指定してください。</Description>
+<Description>- `total`(必須): 総ページ数を指定してください。</Description>
 <Description>
-  - `current`(必須): 現在のページ数を指定してください。
+  - `showTotal`(任意):
+  現在のページ数と総ページ数を表示します。デフォルト値はfalseです。
 </Description>
 <Description>
-  - `total`(必須): 総ページ数を指定してください。
+  - `showFirstLast`(任意):
+  「最初へ」「最後へ」アイコンを表示したい場合は、指定することができます。デフォルト値はfalseです。
 </Description>
 <Description>
-  - `showTotal`(任意): 現在のページ数と総ページ数を表示します。デフォルト値はfalseです。
-</Description>
-<Description>
-  - `showFirstLast`(任意): 「最初へ」「最後へ」アイコンを表示したい場合は、指定することができます。デフォルト値はfalseです。
-</Description>
-<Description>
-  - `onPageChange`(必須): リンクをクリック後に処理をしたい場合に利用することができます。
+  - `onPageChange`(必須):
+  リンクをクリック後に処理をしたい場合に利用することができます。
 </Description>
 <Description>
   - `createUrl`(必須): リンクのhrefとなる値を指定してください。
@@ -66,7 +63,6 @@ export const pageNumber = 1;
     <Pagination
       total={5}
       current={3}
-      showTotal={false}
       showFirstLast={true}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
       {...actions('onClick')}
@@ -75,7 +71,9 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination url="/article/page-PAGE_NUMBER.html" total={5} current={3} showTotal={false} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={
+    '<Pagination url="/article/page-PAGE_NUMBER.html" total={5} current={3} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'
+  }
 />
 
 ## current 1 total 1
@@ -85,7 +83,6 @@ export const pageNumber = 1;
     <Pagination
       total={1}
       current={1}
-      showTotal={false}
       showFirstLast={false}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
       {...actions('onClick')}
@@ -94,7 +91,9 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination total={1} current={1} showTotal={false} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={
+    '<Pagination total={1} current={1} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'
+  }
 />
 
 ## current 2 total 2
@@ -104,7 +103,6 @@ export const pageNumber = 1;
     <Pagination
       total={2}
       current={2}
-      showTotal={false}
       showFirstLast={false}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
       {...actions('onClick')}
@@ -113,7 +111,9 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination total={2} current={2} showTotal={false} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={
+    '<Pagination total={2} current={2} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'
+  }
 />
 
 ## current 2 total 3
@@ -123,7 +123,6 @@ export const pageNumber = 1;
     <Pagination
       total={3}
       current={2}
-      showTotal={false}
       showFirstLast={false}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
       {...actions('onClick')}
@@ -132,7 +131,9 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination total={3} current={2} showTotal={false} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={
+    '<Pagination total={3} current={2} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'
+  }
 />
 
 ## current 2 total 4
@@ -142,7 +143,6 @@ export const pageNumber = 1;
     <Pagination
       total={4}
       current={2}
-      showTotal={false}
       showFirstLast={false}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
       {...actions('onClick')}
@@ -151,7 +151,9 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination total={4} current={2} showTotal={false} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={
+    '<Pagination total={4} current={2} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'
+  }
 />
 
 ## current 8 total 20
@@ -161,7 +163,6 @@ export const pageNumber = 1;
     <Pagination
       total={20}
       current={8}
-      showTotal={false}
       showFirstLast={true}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
       {...actions('onClick')}
@@ -170,7 +171,9 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination total={20} current={8} showTotal={false} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={
+    '<Pagination total={20} current={8} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'
+  }
 />
 
 ## current 900 total 999
@@ -180,7 +183,6 @@ export const pageNumber = 1;
     <Pagination
       total={999}
       current={900}
-      showTotal={false}
       showFirstLast={true}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
       {...actions('onClick')}
@@ -189,7 +191,9 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination total={999} current={900} showTotal={false} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={
+    '<Pagination total={999} current={900} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'
+  }
 />
 
 ## current 10000 total 20000
@@ -203,7 +207,6 @@ export const pageNumber = 1;
     <Pagination
       total={20000}
       current={10000}
-      showTotal={false}
       showFirstLast={true}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
       {...actions('onClick')}
@@ -212,7 +215,9 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination total={20000} current={10000} showTotal={false} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={
+    '<Pagination total={20000} current={10000} showFirstLast={true} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'
+  }
 />
 
 ## showTotal props true
@@ -235,7 +240,9 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination total={20} current={8} showTotal={false} showFirstLast={false} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={
+    '<Pagination total={20} current={8} showFirstLast={false} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'
+  }
 />
 
 ## showFirstLast props false
@@ -253,7 +260,6 @@ export const pageNumber = 1;
     <Pagination
       total={20}
       current={8}
-      showTotal={false}
       showFirstLast={false}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
       {...actions('onClick')}
@@ -262,7 +268,9 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination total={20} current={8} showTotal={false} showFirstLast={false} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={
+    '<Pagination total={20} current={8} showFirstLast={false} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'
+  }
 />
 
 ## create url function
@@ -272,7 +280,6 @@ export const pageNumber = 1;
     <Pagination
       total={20}
       current={8}
-      showTotal={false}
       showFirstLast={true}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
       {...actions('onClick')}
@@ -281,7 +288,9 @@ export const pageNumber = 1;
 </Preview>
 
 <Source
-  code={'<Pagination total={20} current={8} showTotal={false} showFirstLast={false} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'}
+  code={
+    '<Pagination total={20} current={8} showFirstLast={false} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'
+  }
 />
 
 ## リンク動作のカスタマイズ
