--- a/packages/spindle-ui/src/Pagination/Pagination.stories.mdx
+++ b/packages/spindle-ui/src/Pagination/Pagination.stories.mdx
@@ -42,7 +42,7 @@ import { Pagination } from './Pagination';
   現在のページ数と総ページ数を表示します。デフォルト値はfalseです。
 </Description>
 <Description>
-  - `onPageChange`(必須):
+  - `onPageChange`(任意):
   リンクをクリック後に処理をしたい場合に利用することができます。
 </Description>
 <Description>
@@ -232,14 +232,19 @@ export const pageNumber = 1;
   }
 />
 
-## create url function
+## on page change function
+
+export const handleClick = (event, pageNumber) => {
+  event.preventDefault();
+};
 
 <Preview withSource="open">
-  <Story name="create url function">
+  <Story name="on page change function">
     <Pagination
       total={20}
       current={8}
       createUrl={(pageNumber) => `/detail/${pageNumber}.html`}
+      onPageChange={(event, pageNumber) => { handleClick(event, pageNumber); }}
       {...actions('onClick')}
     />
   </Story>
@@ -247,11 +252,11 @@ export const pageNumber = 1;
 
 <Source
   code={
-    '<Pagination total={20} current={8} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} />'
+    '<Pagination total={20} current={8} createUrl={(pageNumber) => `/detail/${pageNumber}.html`} onPageChange={(event, pageNumber) => { handleClick(event, pageNumber); }} />'
   }
 />
 
-## リンク動作のカスタマイズ
+### リンク動作のカスタマイズ
 
 <Description>
   各サービスでルーティングを利用したい場合は、onPageChangeの第一引数にあるeventを利用してください。
